Fix scrollbar coloring

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -73,6 +73,7 @@ body {
 }
 
 #parallax-container {
+	width: 100vw;
 	height: 100vh;
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -89,7 +90,7 @@ body {
 	z-index: -10;
 }
 
-#content-body {
+#content-container {
 	position: absolute;
 	left: 0;
 	top: 0;
